# PoseEstimation

./: .gitignore  CmakeLists.txt
Fanelli/: CMakeLists.txt
Fanelli/demo/: CMakeLists.txt
Fanelli/source/: main.cpp
HololensCode/: CursorManager.cs  GazeManager.cs
include/: FaceTracker.h  FaceTrackerException.h  FatigueDetection.h
source/: FaceTracker.cpp  FatigueDetection.cpp  main.cpp
